fixed navbar completed

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,3 +1,18 @@
 /* Layout
 ================================= */
 
+body {
+    padding-top: 7px;
+}
+
+.container  {
+    max-width: 1000px;
+}
+
+/* Jumbotron
+=================== */
+
+.jumbotron {
+    text-align: center;
+}
+
