--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -16,3 +16,11 @@ body {
     text-align: center;
 }
 
+/*--- Gylphicons ----*/
+
+.glyphicon {
+    font-size: 3em;
+    display: block;
+    text-align: center;
+    color: #3a87ab;
+}
